r-u-still-there (0.3.0-1) UNRELEASED; urgency=medium

  * Dynamic temperatures for rendering scale are now based on a moving average
    and have a minimum range applied.

 -- Will Ross <paxswill@paxswill.com>  Thu, 26 Aug 2021 15:33:30 -0400

r-u-still-there (0.2.0-2) buster; urgency=medium

  * Add Melexis camera values to config example.

 -- Will Ross <paxswill@paxswill.com>  Wed, 25 Aug 2021 11:52:59 -0400

r-u-still-there (0.2.0-1) buster; urgency=medium

  * Add MLX90640 and MLX90641 support.

 -- Will Ross <paxswill@paxswill.com>  Wed, 25 Aug 2021 11:14:41 -0400

r-u-still-there (0.1.1-2) buster; urgency=medium

  * Fix temperature example in config file.
  * Move unique_id under home_assistant in the config file example.

 -- Will Ross <paxswill@paxswill.com>  Sun, 11 Jul 2021 16:24:51 +0000

r-u-still-there (0.1.1) buster; urgency=medium

  * Improved configuration handling, specifically allowing empty [threshold]
    sections, and allowing all settings to be set from the command line.

 -- Will Ross <paxswill@paxswill.com>  Sun, 11 Jul 2021 15:44:55 +0000

r-u-still-there (0.1.0-1) buster; urgency=medium

  * Fix packaging for r-u-still-there.service file for 32-bit sub-architecture
    variants.

 -- Will Ross <paxswill@paxswill.com>  Sun, 11 Jul 2021 15:42:46 +0000

r-u-still-there (0.1.0) buster; urgency=medium

  * Initial release.

 -- Will Ross <paxswill@paxswill.com>  Fri, 09 Jul 2021 14:03:00 +0000