@@ -2,6 +2,7 @@ r-u-still-there (0.3.0-1) UNRELEASED; urgency=medium
 
   * Dynamic temperatures for rendering scale are now based on a moving average
     and have a minimum range applied.
+  * The thermometer precision can be truncated to reduce update frequency.
 
  -- Will Ross <paxswill@paxswill.com>  Thu, 26 Aug 2021 15:33:30 -0400
 
